fix: Long name location is cut off [EP-1866]

--- a/packages/earth-admin/src/components/data-listing/styles.scss
+++ b/packages/earth-admin/src/components/data-listing/styles.scss
@@ -41,3 +41,7 @@
   }
 }
 
+
+.ng-results-container {
+  word-wrap: break-word;
+}
