--- a/packages/earth-map/src/components/widgets/styles.scss
+++ b/packages/earth-map/src/components/widgets/styles.scss
@@ -26,3 +26,7 @@
 .widgets--list-item {
   background: $marapp-gray-8;
 }
+
+.c-widgets {
+  word-wrap: break-word;
+}
